--- a/cv.tex
+++ b/cv.tex
@@ -116,7 +116,11 @@ Royal Institute of Technology (KTH) \hfill Stockholm\\
 \header{Projects}
 {\textbf{Homelab}} {\sl K8s, Helm, Docker, GitHub Actions, ArgoCD, Incus} \\
 A homelab kubernetes deployment running on 3 nodes (virtualized) for me to test new tools and learn about server management, networking and kubernetes GitOps. All relevant documentation can be found \href{https://github.com/pontusc/homelab}{in this repository} or via my GitHub.\\
-\vspace*{8mm}
+\vspace{4mm}
+
+{\textbf{Dotnet App}} {\sl GitLab CI, Docker, Portainer} \\
+A course project to build and deploy a dotnet app using a React frontend and a Dotnet backend, deployed on a portainer instance. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
+\vspace{8mm}
 
 %==== Experience ====%
 \header{Developer - IT}
