--- a/cv.tex
+++ b/cv.tex
@@ -109,7 +109,7 @@ Royal Institute of Technology (KTH) \hfill Stockholm\\
 \vspace{4mm}
 \begin{tabular}{ l l }
 	Languages: & C\#, Java, Python, Bash, SQL, C++, Go, C, Lua\\[1mm]
-	Tools:     & Git, Linux, Docker, GitHub Actions, GitLab Pipelines, Kubernetes, ArgoCD, K3S\\
+	Tools:     & Git, Linux, Docker, GitHub Actions, GitLab Pipelines, Kubernetes, ArgoCD\\
 \end{tabular}
 \vspace{8mm}
 
