--- a/cv.tex
+++ b/cv.tex
@@ -87,7 +87,10 @@
 %==== Intro ====%
 \header{Profile}
 \vspace{4mm}
-I'm a DevOps Engineer who believes the best technology emerges from great teamwork and continuous learning. With a diverse background spanning VR development to Kubernetes orchestration, I bring both technical expertise and a collaborative mindset to every challenge. Currently deepening my knowledge through formal DevOps studies while experimenting with cutting-edge tools in my personal homelab. I'm passionate about creating reliable, scalable solutions and thrive in environments where I can both contribute meaningfully and grow alongside innovative teams.
+I'm a DevOps Engineer who believes the best technology emerges from great teamwork and continuous learning. With a diverse background spanning VR development to Kubernetes orchestration, I bring both technical expertise and a collaborative mindset to every challenge. Currently deepening my knowledge through formal DevOps studies while experimenting with cutting-edge tools in my personal homelab. 
+\newline
+\newline
+I'm passionate about creating reliable, scalable solutions and thrive in environments where I can both contribute meaningfully and grow alongside innovative teams.
 \vspace{8mm}
 
 %==== Education ====%
