--- a/cv.tex
+++ b/cv.tex
@@ -119,7 +119,7 @@ A homelab kubernetes deployment running on 3 nodes (virtualized) for me to test 
 \vspace{4mm}
 
 {\textbf{Dotnet App}} {\sl GitLab CI, Docker, Portainer} \\
-A course project to build and deploy a dotnet app using a React frontend and a Dotnet backend, deployed on a portainer instance. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
+A course project to build and deploy a dotnet app using a React frontend and a Dotnet backend, deployed using portainer. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
 \vspace{8mm}
 
 %==== Experience ====%
