Better project description

--- a/cv.tex
+++ b/cv.tex
@@ -118,8 +118,8 @@ Royal Institute of Technology (KTH) \hfill Stockholm\\
 A homelab kubernetes deployment running on 3 nodes (virtualized) for me to test new tools and learn about server management, networking and kubernetes GitOps. All relevant documentation can be found \href{https://github.com/pontusc/homelab}{in this repository} or via my GitHub.\\
 \vspace{4mm}
 
-{\textbf{Dotnet App}} {\sl GitLab CI, Docker, Portainer} \\
-A course project to build and deploy a dotnet app using a React frontend and a Dotnet backend, deployed using portainer. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
+{\textbf{Fullstack .NET Application CI/CD}} {\sl GitLab CI, Docker, Portainer} \\
+A course project to create a CI/CD workflow using GitLab pipelines. Features containerization & deployment to Portainer. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
 \vspace{8mm}
 
 %==== Experience ====%
