Escape the and character

--- a/cv.tex
+++ b/cv.tex
@@ -119,7 +119,7 @@ A homelab kubernetes deployment running on 3 nodes (virtualized) for me to test 
 \vspace{4mm}
 
 {\textbf{Fullstack .NET Application CI/CD}} {\sl GitLab CI, Docker, Portainer} \\
-A course project to create a CI/CD workflow using GitLab pipelines. Features containerization & deployment to Portainer. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
+A course project to create a CI/CD workflow using GitLab pipelines. Features containerization \& deployment to Portainer. See this \href{https://github.com/pontusc/devops-doe24/tree/main/pipeline-utilities}{folder and repository} for relevant pipelines and build tools.\\
 \vspace{8mm}
 
 %==== Experience ====%
