--- a/cv.tex
+++ b/cv.tex
@@ -114,7 +114,7 @@ Royal Institute of Technology (KTH) \hfill Stockholm\\
 \vspace{8mm}
 
 \header{Projects}
-{\textbf{Homelab}} {\sl K8s, Helm, Docker, GitHub Actions, ArgoCD, Incus} \\
+{\textbf{Homelab}} {\sl Kubernetes, Helm, Docker, GitHub Actions, ArgoCD, Incus} \\
 A homelab kubernetes deployment running on 3 nodes (virtualized) for me to test new tools and learn about server management, networking and kubernetes GitOps. All relevant documentation can be found \href{https://github.com/pontusc/homelab}{in this repository} or via my GitHub.\\
 \vspace{4mm}
 
